add new algo HNSW2

--- a/knowhere/CMakeLists.txt
+++ b/knowhere/CMakeLists.txt
@@ -78,6 +78,7 @@ if ( LINUX )
             knowhere/index/vector_index/IndexAnnoy.cpp
             knowhere/index/vector_index/IndexRHNSW.cpp
             knowhere/index/vector_index/IndexHNSW.cpp
+            knowhere/index/vector_index/IndexHNSW2.cpp
             knowhere/index/vector_index/IndexRHNSWFlat.cpp
             knowhere/index/vector_index/IndexRHNSWSQ.cpp
             knowhere/index/vector_index/IndexRHNSWPQ.cpp
